--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "ca3a7b6e",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "daa56e60",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
        "max        1.000000      1.000000      1.000000      1.000000      1.00000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,12 +484,532 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "541a6339",
+   "metadata": {},
+   "source": [
+    "Rename Columns (Clean Naming)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18b869c8",
+   "execution_count": 6,
+   "id": "0ac7cd99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['UDI', 'Product ID', 'Type', 'air_temp_k', 'process_temp_k',\n",
+       "       'rotational_speed_rpm', 'torque_nm', 'tool_wear_min', 'Machine failure',\n",
+       "       'TWF', 'HDF', 'PWF', 'OSF', 'RNF'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.rename(columns={\n",
+    "    \"Air temperature [K]\": \"air_temp_k\",\n",
+    "    \"Process temperature [K]\": \"process_temp_k\",\n",
+    "    \"Rotational speed [rpm]\": \"rotational_speed_rpm\",\n",
+    "    \"Torque [Nm]\": \"torque_nm\",\n",
+    "    \"Tool wear [min]\": \"tool_wear_min\"\n",
+    "}, inplace=True)\n",
+    "\n",
+    "df.columns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29c26ac1",
+   "metadata": {},
+   "source": [
+    "Check Missing Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0751e467",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UDI                     0\n",
+       "Product ID              0\n",
+       "Type                    0\n",
+       "air_temp_k              0\n",
+       "process_temp_k          0\n",
+       "rotational_speed_rpm    0\n",
+       "torque_nm               0\n",
+       "tool_wear_min           0\n",
+       "Machine failure         0\n",
+       "TWF                     0\n",
+       "HDF                     0\n",
+       "PWF                     0\n",
+       "OSF                     0\n",
+       "RNF                     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4098acb",
+   "metadata": {},
+   "source": [
+    "Drop Irrelevant Columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6d63f3fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>air_temp_k</th>\n",
+       "      <th>process_temp_k</th>\n",
+       "      <th>rotational_speed_rpm</th>\n",
+       "      <th>torque_nm</th>\n",
+       "      <th>tool_wear_min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>298.1</td>\n",
+       "      <td>308.6</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>42.8</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>298.2</td>\n",
+       "      <td>308.7</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>46.3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>298.1</td>\n",
+       "      <td>308.5</td>\n",
+       "      <td>1498</td>\n",
+       "      <td>49.4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>298.2</td>\n",
+       "      <td>308.6</td>\n",
+       "      <td>1433</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>298.2</td>\n",
+       "      <td>308.7</td>\n",
+       "      <td>1408</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   air_temp_k  process_temp_k  rotational_speed_rpm  torque_nm  tool_wear_min\n",
+       "0       298.1           308.6                  1551       42.8              0\n",
+       "1       298.2           308.7                  1408       46.3              3\n",
+       "2       298.1           308.5                  1498       49.4              5\n",
+       "3       298.2           308.6                  1433       39.5              7\n",
+       "4       298.2           308.7                  1408       40.0              9"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_to_drop = [\n",
+    "    \"UDI\",\n",
+    "    \"Product ID\",\n",
+    "    \"Type\",\n",
+    "    \"Machine failure\",\n",
+    "    \"TWF\",\n",
+    "    \"HDF\",\n",
+    "    \"PWF\",\n",
+    "    \"OSF\",\n",
+    "    \"RNF\"\n",
+    "]\n",
+    "\n",
+    "df_clean = df.drop(columns=columns_to_drop)\n",
+    "df_clean.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d686c61",
+   "metadata": {},
+   "source": [
+    "Validate Data Ranges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fcf18925",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>air_temp_k</th>\n",
+       "      <th>process_temp_k</th>\n",
+       "      <th>rotational_speed_rpm</th>\n",
+       "      <th>torque_nm</th>\n",
+       "      <th>tool_wear_min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [air_temp_k, process_temp_k, rotational_speed_rpm, torque_nm, tool_wear_min]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean[\n",
+    "    (df_clean[\"rotational_speed_rpm\"] <= 0) |\n",
+    "    (df_clean[\"torque_nm\"] <= 0)\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e56a0999",
+   "metadata": {},
+   "source": [
+    "Feature Consistency Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "74adf24f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_clean[\"power_proxy\"] = (\n",
+    "    df_clean[\"rotational_speed_rpm\"] * df_clean[\"torque_nm\"]\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c3c0b683",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       66382.8\n",
+       "1       65190.4\n",
+       "2       74001.2\n",
+       "3       56603.5\n",
+       "4       56320.0\n",
+       "         ...   \n",
+       "9995    47318.0\n",
+       "9996    51897.6\n",
+       "9997    54943.0\n",
+       "9998    68288.0\n",
+       "9999    60300.0\n",
+       "Name: power_proxy, Length: 10000, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean[\"power_proxy\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d1f5ac4",
+   "metadata": {},
+   "source": [
+    "Final Clean Dataset Overview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "36f599af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10000 entries, 0 to 9999\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   air_temp_k            10000 non-null  float64\n",
+      " 1   process_temp_k        10000 non-null  float64\n",
+      " 2   rotational_speed_rpm  10000 non-null  int64  \n",
+      " 3   torque_nm             10000 non-null  float64\n",
+      " 4   tool_wear_min         10000 non-null  int64  \n",
+      " 5   power_proxy           10000 non-null  float64\n",
+      "dtypes: float64(4), int64(2)\n",
+      "memory usage: 468.9 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dfb2ed98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>air_temp_k</th>\n",
+       "      <th>process_temp_k</th>\n",
+       "      <th>rotational_speed_rpm</th>\n",
+       "      <th>torque_nm</th>\n",
+       "      <th>tool_wear_min</th>\n",
+       "      <th>power_proxy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>300.004930</td>\n",
+       "      <td>310.005560</td>\n",
+       "      <td>1538.776100</td>\n",
+       "      <td>39.986910</td>\n",
+       "      <td>107.951000</td>\n",
+       "      <td>59967.147040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>2.000259</td>\n",
+       "      <td>1.483734</td>\n",
+       "      <td>179.284096</td>\n",
+       "      <td>9.968934</td>\n",
+       "      <td>63.654147</td>\n",
+       "      <td>10193.093881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>295.300000</td>\n",
+       "      <td>305.700000</td>\n",
+       "      <td>1168.000000</td>\n",
+       "      <td>3.800000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10966.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>298.300000</td>\n",
+       "      <td>308.800000</td>\n",
+       "      <td>1423.000000</td>\n",
+       "      <td>33.200000</td>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>53105.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>300.100000</td>\n",
+       "      <td>310.100000</td>\n",
+       "      <td>1503.000000</td>\n",
+       "      <td>40.100000</td>\n",
+       "      <td>108.000000</td>\n",
+       "      <td>59883.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>301.500000</td>\n",
+       "      <td>311.100000</td>\n",
+       "      <td>1612.000000</td>\n",
+       "      <td>46.800000</td>\n",
+       "      <td>162.000000</td>\n",
+       "      <td>66873.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>304.500000</td>\n",
+       "      <td>313.800000</td>\n",
+       "      <td>2886.000000</td>\n",
+       "      <td>76.600000</td>\n",
+       "      <td>253.000000</td>\n",
+       "      <td>99980.400000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         air_temp_k  process_temp_k  rotational_speed_rpm     torque_nm  \\\n",
+       "count  10000.000000    10000.000000          10000.000000  10000.000000   \n",
+       "mean     300.004930      310.005560           1538.776100     39.986910   \n",
+       "std        2.000259        1.483734            179.284096      9.968934   \n",
+       "min      295.300000      305.700000           1168.000000      3.800000   \n",
+       "25%      298.300000      308.800000           1423.000000     33.200000   \n",
+       "50%      300.100000      310.100000           1503.000000     40.100000   \n",
+       "75%      301.500000      311.100000           1612.000000     46.800000   \n",
+       "max      304.500000      313.800000           2886.000000     76.600000   \n",
+       "\n",
+       "       tool_wear_min   power_proxy  \n",
+       "count   10000.000000  10000.000000  \n",
+       "mean      107.951000  59967.147040  \n",
+       "std        63.654147  10193.093881  \n",
+       "min         0.000000  10966.800000  \n",
+       "25%        53.000000  53105.400000  \n",
+       "50%       108.000000  59883.900000  \n",
+       "75%       162.000000  66873.750000  \n",
+       "max       253.000000  99980.400000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a7ad56e",
+   "metadata": {},
+   "source": [
+    "Save Processed Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "50a2da8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Clean dataset saved successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "processed_path = \"D:\\\\ML\\\\ML Project\\\\Sustainable_Manufacturing_Intelligence\\\\Dataset\\\\processed\\\\manufacturing_processed.csv\"\n",
+    "df_clean.to_csv(processed_path, index=False)\n",
+    "\n",
+    "print(\"✅ Clean dataset saved successfully\")\n"
+   ]
   }
  ],
  "metadata": {
